--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "aos": "^2.3.4",
     "lightbox2": "^2.11.3",
     "react-modal-image": "^2.5.0"
   }
